--- a/whatsapp.css
+++ b/whatsapp.css
@@ -15,7 +15,7 @@ body {
 .left-box {
     background-color: #111b21;
     width: 30%;
-    
+    height: 100vh;
 }
 
 .head-box {
@@ -74,4 +74,5 @@ body {
 
 .right-box img {
     width: 100%;
+    height: 100vh;
 }
