--- a/whatsapp.css
+++ b/whatsapp.css
@@ -10,25 +10,43 @@
 body {
     display: flex;
     width: 100%;
+    margin: 0 0 0 1.3%;
+    padding-top: 1.3%;
+    background-color: #0c1317;
 }
+
+.top {
+    /* position: fixed; */
+    border: 0;
+    border-bottom: 1px;
+    border-color: rgba(174,186,193, 0.1);
+    border-style: solid;
+}
+
 
 .left-box {
     background-color: #111b21;
     width: 30%;
     height: 100vh;
+    border: 0;
+    border-right: 0.05px;
+    border-style: solid;
+    border-color: rgba(174,186,193, 0.1);
 }
 
 .head-box {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 50px;
+    height: 40px;
     background-color: #202c33;
+    padding: 8px 9px;
 
     img {
         height: 40px;
         border-radius: 50%;
         margin-left: 10px;
+        /* padding-left: 9px; */
     }
 
 }
@@ -51,28 +69,80 @@ body {
 .option ul {
     display: flex;
     margin-left: 15px;
+    margin-bottom: 8px;
 
     li {
-        margin: 10px 30px 0 0;
+        margin: 10px 10px 0 0;
         border-style: solid;
         border-radius: 30px;
         border: 0;
         background-color: #202c33;
-        padding: 5px;
+        padding: 8px 10px;
+        
+    }
+}
+
+.search-box {
+    padding-right: 12px;
+}
+
+input::placeholder {
+    font-family: sans-serif;
+    color: #aebac1;
+}
+
+.search{
+    padding: 0 32px 0 10px;
+    display: flex;
+    margin-top: 7px;
+    border-radius: 5px;
+    height: 35px;
+    margin-left: 2.5%;
+    background-color: #202c33;
+    align-items: center;
+    justify-content: space-between;
+
+    svg {
+        margin-right: 30px;
     }
 }
 
 #search {
-    margin-top: 10px;
-    border-radius: 5px;
-    border: 0;
-    height: 30px;
-    width: 95%;
-    margin-left: 2.5%;
+    border-style: none;
+    border-color: #202c33;
     background-color: #202c33;
+    width: 90%;
 }
 
-.right-box img {
-    width: 100%;
-    height: 100vh;
+input:focus {
+    outline: none;
+}
+
+#RHS {
+    width: 70%;
+    /* height: 100vh; */
+    background-color: #222e35;
+}
+
+.page {
+    text-align: center;
+}
+
+.first {
+    margin-top: 15%;
+}
+
+.download {
+    margin: 28px 0 0;
+}
+
+.Make {
+    margin: 24px 0 0;
+}
+
+.store {
+    margin: 32px 0 0;
+
+    border-radius: ;
+    background-color: #00a884;
 }
