Update: Added chat messages, online status and message count

--- a/whatsapp.css
+++ b/whatsapp.css
@@ -5,6 +5,7 @@
     list-style-type: none;
     color: #aebac1;
     font-family: sans-serif;
+    text-decoration: none;
 }
 
 body {
@@ -27,7 +28,6 @@ body {
 .left-box {
     background-color: #111b21;
     width: 30%;
-    height: 100vh;
     border: 0;
     border-right: 0.5px;
     border-style: solid;
@@ -120,7 +120,6 @@ input:focus {
 
 #RHS {
     width: 70%;
-    height: 100vh;
     background-color: #222e35;
 }
 
@@ -134,10 +133,14 @@ input:focus {
 
 .download {
     margin: 28px 0 0;
+    h1 {
+        font-weight: lighter;
+    }
 }
 
 .Make {
     margin: 24px 0 0;
+    font-size: small;
 }
 
 .store {
@@ -159,7 +162,13 @@ button:hover {
 }
 
 .encrypt {
-    margin-top: 150px
+    margin-top: 150px;
+    font-size: small;
+    color: rgba(174,186,193, 0.4);
+
+    svg {
+        opacity: 50%;
+    }
 }
 
 
@@ -172,16 +181,66 @@ button:hover {
     margin: 10px 0 0 10px;
 }
 
-.chat1, .chat2, .chat3, .chat4, .chat5, .chat6, .chat7 {
+.chat1, .chat2, .chat3, .chat4, .chat5, .chat6, .chat7, .chat8 {
+    padding-right: 15px;
     display: flex;
     align-items: center;
     border: 0;
     border-bottom: 1px;
     border-style: solid;
     border-color: rgba(174, 186, 193, 0.2);
-    /* margin: 10px 0; */
 
     div {
         margin: 4px;
+    }
+
+}
+
+.text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8 {
+    width: 100%;
+    /* border: 0;
+    border-bottom: 1px;
+    border-style: solid;
+    border-color:rgba(174, 186, 193, 0.2); */
+
+    :last-child {
+        margin: 2px 0 0 0;
+        padding-left: 3px;
+        font-size: 15px;
+    }
+}
+
+
+.H1, .H2, .H3, .H4, .H5, .H6, .H7, .H8 {
+    display: flex;
+    justify-content: space-between;
+
+    :first-child{
+        color: white;
+        margin: 0;
+    }
+
+    :last-child{
+        font-size: 12px;
+    }
+}
+
+.date1, .date3, .date4, .date6 {
+    color: #00a884;
+}
+
+.down8, .down1, .down3{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    :last-child{
+    color: black;
+    background-color: #00a884;
+    border-radius: 40%;
+    border: 0;
+    height: 16px;
+    padding: 3px;
+    font-size: small;
     }
 }
