--- a/whatsapp.css
+++ b/whatsapp.css
@@ -11,7 +11,7 @@
 body {
     display: flex;
     width: 100%;
-    margin: 10px;
+    /* margin: 10px 0 10px 0; */
     height: 100vh;
     background-color: #0c1317;
 }
@@ -129,9 +129,10 @@ input:focus {
 
 #RHS {
     width: 70%;
-    background-color: #222e35;
-    height: 100vh;
+    height: 97vh;
     padding: 10px;
+    flex: 0 0 auto;
+    background-color: #222e35;
 }
 
 .page {
@@ -257,6 +258,7 @@ button:hover {
 }
 
 .chats {
-    flex: 1;
+    flex: 3;
     overflow-y: auto;
+    /* padding: 10px; */
 }
