--- a/whatsapp.css
+++ b/whatsapp.css
@@ -11,7 +11,6 @@
 body {
     display: flex;
     width: 100%;
-    /* margin: 10px 0 10px 0; */
     height: 100vh;
     background-color: #0c1317;
 }
@@ -183,9 +182,6 @@ button:hover {
     }
 }
 
-
-
-
 .chats img {
     border-radius: 50%;
     height: 50px;
@@ -259,6 +255,15 @@ button:hover {
 
 .chats {
     flex: 3;
-    overflow-y: auto;
-    /* padding: 10px; */
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: #374045 #111b21;
+}
+
+#chats::-webkit-scrollbar-track {
+    background: #111b21;
+
+    &::-webkit-scrollbar-thumb {
+        color: #222e35;
+    }
 }
